node/src/generated/ocs-t-parser.ts
// @ts-nocheck
// This file is auto-generated by scripts/build-parser.js.
// Do not edit this file directly.

// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = ":";
  var peg$c1 = "-";
  var peg$c2 = "{";
  var peg$c3 = "}";
  var peg$c4 = "[";
  var peg$c5 = "]";
  var peg$c6 = "\"\"\"";
  var peg$c7 = "\"";
  var peg$c8 = "\\";
  var peg$c9 = "/";
  var peg$c10 = "b";
  var peg$c11 = "f";
  var peg$c12 = "n";
  var peg$c13 = "r";
  var peg$c14 = "t";
  var peg$c15 = "u";
  var peg$c16 = "0";
  var peg$c17 = ".";
  var peg$c18 = "true";
  var peg$c19 = "false";
  var peg$c20 = "null";
  var peg$c21 = ",";
  var peg$c22 = "#";
  var peg$c23 = "\r\n";

  var peg$r0 = /^[A-Za-z_]/;
  var peg$r1 = /^[A-Za-z0-9_\-]/;
  var peg$r2 = /^[sS]/;
  var peg$r3 = /^[\n\r"\\]/;
  var peg$r4 = /^[1-9]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[eE]/;
  var peg$r7 = /^[+\-]/;
  var peg$r8 = /^[A-Za-z0-9_\-\/.]/;
  var peg$r9 = /^[ \t\f\v]/;
  var peg$r10 = /^[\n\r]/;
  var peg$r11 = /^[0-9A-Fa-f]/;

  var peg$e0 = peg$literalExpectation(":", false);
  var peg$e1 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false);
  var peg$e2 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", "-"], false, false);
  var peg$e3 = peg$literalExpectation("-", false);
  var peg$e4 = peg$literalExpectation("{", false);
  var peg$e5 = peg$literalExpectation("}", false);
  var peg$e6 = peg$literalExpectation("[", false);
  var peg$e7 = peg$literalExpectation("]", false);
  var peg$e8 = peg$literalExpectation("\"\"\"", false);
  var peg$e9 = peg$classExpectation(["s", "S"], false, false);
  var peg$e10 = peg$literalExpectation("\"", false);
  var peg$e11 = peg$classExpectation(["\n", "\r", "\"", "\\"], false, false);
  var peg$e12 = peg$anyExpectation();
  var peg$e13 = peg$literalExpectation("\\", false);
  var peg$e14 = peg$literalExpectation("/", false);
  var peg$e15 = peg$literalExpectation("b", false);
  var peg$e16 = peg$literalExpectation("f", false);
  var peg$e17 = peg$literalExpectation("n", false);
  var peg$e18 = peg$literalExpectation("r", false);
  var peg$e19 = peg$literalExpectation("t", false);
  var peg$e20 = peg$literalExpectation("u", false);
  var peg$e21 = peg$literalExpectation("0", false);
  var peg$e22 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e23 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e24 = peg$literalExpectation(".", false);
  var peg$e25 = peg$classExpectation(["e", "E"], false, false);
  var peg$e26 = peg$classExpectation(["+", "-"], false, false);
  var peg$e27 = peg$literalExpectation("true", false);
  var peg$e28 = peg$literalExpectation("false", false);
  var peg$e29 = peg$literalExpectation("null", false);
  var peg$e30 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", "-", "/", "."], false, false);
  var peg$e31 = peg$literalExpectation(",", false);
  var peg$e32 = peg$classExpectation([" ", "\t", "\f", "\v"], false, false);
  var peg$e33 = peg$literalExpectation("#", false);
  var peg$e34 = peg$literalExpectation("\r\n", false);
  var peg$e35 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e36 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false);

  var peg$f0 = function(doc) { return doc; };
  var peg$f1 = function(headerBlock, body) {
      return {
        headers: headerBlock,
        body,
      };
    };
  var peg$f2 = function(first, rest, trailing) {
      const lines = [first, ...rest.map(([, line]) => line)];
      const headers = Object.create(null);
      const keyLocations = new Map();

      for (const entry of lines) {
        if (headers[entry.key] !== undefined) {
          error(`Duplicate header "${entry.key}"`, entry.loc);
        }
        headers[entry.key] = entry.value;
        keyLocations.set(entry.key, entry.loc);
      }

      if (headers['ocs-t'] === undefined) {
        const loc = lines.length > 0 ? lines[0].loc : location();
        error('Missing required "ocs-t" header', loc);
      }

      const revision = headers['ocs-t'];
      if (typeof revision !== 'number' || !Number.isInteger(revision)) {
        const loc = keyLocations.get('ocs-t') ?? location();
        error('"ocs-t" header must be an integer', loc);
      }

      let version;
      if (Object.prototype.hasOwnProperty.call(headers, 'ocs-version')) {
        const value = headers['ocs-version'];
        if (typeof value !== 'string') {
          const loc = keyLocations.get('ocs-version') ?? location();
          error('"ocs-version" header must be a string', loc);
        }
        version = value;
      }

      const extras = Object.create(null);
      for (const [key, value] of Object.entries(headers)) {
        if (key === 'ocs-t' || key === 'ocs-version') {
          continue;
        }
        extras[key] = value;
      }

      return {
        revision,
        version,
        extras: Object.keys(extras).length > 0 ? extras : undefined,
      };
    };
  var peg$f3 = function(key, value) {
      const loc = location();
      return { key, value, loc };
    };
  var peg$f4 = function(members) {
      const obj = {};

      if (members) {
        for (const entry of members) {
          if (Object.prototype.hasOwnProperty.call(obj, entry.key)) {
            error(`Duplicate key "${entry.key}"`, entry.loc);
          }
          obj[entry.key] = entry.value;
        }
      }

      return obj;
    };
  var peg$f5 = function(head, tail, trailing) {
      return [head, ...tail.map(([, member]) => member)];
    };
  var peg$f6 = function(key, value) {
      const loc = location();
      const normalizedValue = key === TRAITS_KEY ? normalizeTraits(value, loc) : value;
      return { key, value: normalizedValue, loc };
    };
  var peg$f7 = function(elements) { return elements ?? []; };
  var peg$f8 = function(head, tail, trailing) {
      return [head, ...tail.map(([, element]) => element)];
    };
  var peg$f9 = function(value) { return value; };
  var peg$f10 = function(body) { return processTripleString(body); };
  var peg$f11 = function(chars) { return chars.join(''); };
  var peg$f12 = function(char) { return char; };
  var peg$f13 = function(sequence) { return sequence; };
  var peg$f14 = function() { return '"'; };
  var peg$f15 = function() { return '\\'; };
  var peg$f16 = function() { return '/'; };
  var peg$f17 = function() { return '\b'; };
  var peg$f18 = function() { return '\f'; };
  var peg$f19 = function() { return '\n'; };
  var peg$f20 = function() { return '\r'; };
  var peg$f21 = function() { return '\t'; };
  var peg$f22 = function(digits) { return String.fromCharCode(parseInt(digits, 16)); };
  var peg$f23 = function(value) { return parseFloat(value); };
  var peg$f24 = function() { return true; };
  var peg$f25 = function() { return false; };
  var peg$f26 = function() { return null; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseWS();
    s2 = peg$parseDocument();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseWS();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDocument() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseHeaderBlock();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      s3 = peg$parseObject();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHeaderBlock() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseBlankLine();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseBlankLine();
    }
    s2 = peg$parseHeaderLine();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$currPos;
      s5 = [];
      s6 = peg$parseBlankLine();
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$parseBlankLine();
      }
      s6 = peg$parseHeaderLine();
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = [];
        s6 = peg$parseBlankLine();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parseBlankLine();
        }
        s6 = peg$parseHeaderLine();
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s4 = [];
      s5 = peg$parseBlankLine();
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$parseBlankLine();
      }
      peg$savedPos = s0;
      s0 = peg$f2(s2, s3, s4);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHeaderLine() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseHeaderKey();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseOptInlineWS();
      if (input.charCodeAt(peg$currPos) === 58) {
        s3 = peg$c0;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseOptInlineWS();
        s5 = peg$parseHeaderValue();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseOptInlineWS();
          s7 = peg$parseComment();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s8 = [];
          s9 = peg$parseNewline();
          if (s9 !== peg$FAILED) {
            while (s9 !== peg$FAILED) {
              s8.push(s9);
              s9 = peg$parseNewline();
            }
          } else {
            s8 = peg$FAILED;
          }
          if (s8 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f3(s1, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHeaderKey() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r1.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = input.charAt(peg$currPos);
        if (peg$r1.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
      }
      s4 = [];
      s5 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 45) {
        s6 = peg$c1;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s6 !== peg$FAILED) {
        s7 = [];
        s8 = input.charAt(peg$currPos);
        if (peg$r1.test(s8)) {
          peg$currPos++;
        } else {
          s8 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s8 !== peg$FAILED) {
          while (s8 !== peg$FAILED) {
            s7.push(s8);
            s8 = input.charAt(peg$currPos);
            if (peg$r1.test(s8)) {
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
        } else {
          s7 = peg$FAILED;
        }
        if (s7 !== peg$FAILED) {
          s6 = [s6, s7];
          s5 = s6;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 45) {
          s6 = peg$c1;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s6 !== peg$FAILED) {
          s7 = [];
          s8 = input.charAt(peg$currPos);
          if (peg$r1.test(s8)) {
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s8 !== peg$FAILED) {
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = input.charAt(peg$currPos);
              if (peg$r1.test(s8)) {
                peg$currPos++;
              } else {
                s8 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e2); }
              }
            }
          } else {
            s7 = peg$FAILED;
          }
          if (s7 !== peg$FAILED) {
            s6 = [s6, s7];
            s5 = s6;
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
      }
      s2 = [s2, s3, s4];
      s1 = s2;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseHeaderValue() {
    var s0;

    s0 = peg$parseTripleString();
    if (s0 === peg$FAILED) {
      s0 = peg$parseString();
      if (s0 === peg$FAILED) {
        s0 = peg$parseNumber();
        if (s0 === peg$FAILED) {
          s0 = peg$parseBareword();
        }
      }
    }

    return s0;
  }

  function peg$parseObject() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWS();
      s3 = peg$parseObjectMembers();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parseWS();
      if (input.charCodeAt(peg$currPos) === 125) {
        s5 = peg$c3;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s5 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseObjectMembers() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseObjectMember();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseListSeparator();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseObjectMember();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseListSeparator();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseObjectMember();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      s3 = peg$parseListSeparator();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f5(s1, s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseObjectMember() {
    var s0, s1, s2, s3, s4, s5;
